修改部分界面视图，用户发布留言

--- a/src/main/webapp/WEB-INF/css/style2.css
+++ b/src/main/webapp/WEB-INF/css/style2.css
@@ -1136,7 +1136,7 @@ h3.tittle-w3ls.cen {
 
 .works {
     padding: 7em 0;
-    background: #1d1c1c;
+    background: #FF0000;
 }
 
 
@@ -1913,7 +1913,7 @@ ul.footer_list_icons.error {
 
 .footer-top-w3-agileits {
     padding: 4em 0 3em;
-    background: #1d1c1c;
+    background: #FF0000;
 }
 
 .footer-grid-wthree-agile h3 {
