--- a/src/main/webapp/WEB-INF/css/style2.css
+++ b/src/main/webapp/WEB-INF/css/style2.css
@@ -1913,7 +1913,7 @@ ul.footer_list_icons.error {
 
 .footer-top-w3-agileits {
     padding: 4em 0 3em;
-    background: #FF0000;
+    background: #333;
 }
 
 .footer-grid-wthree-agile h3 {
